# ftr-pos_f2-n6_semantic-search-and-data-classification

./: .gitignore  .markdownlintrc  Pipfile  README.md  pyproject.toml
.claude/projects/: b1-embeddings-semantic-search-summary.md
.github/docs/content/: b1.md  b2.md  b3.md
.github/docs/content/assessments/: q.md
.github/docs/content/resumes/: class-content-resume.md  project1.md  project2.md  rb1.md  rb2.md  rb3.md
src/b1/: README.md
src/b1/dados/: temperaturas_cidades.csv  textos_exemplo.json
src/b1/docs/: PLANEJAMENTO.md
src/b1/exemplos/: 01_embeddings_ingenuos.py  02_word_embeddings.py  03_similaridade_embeddings.py  04_busca_semantica.py  05_visualizacao_3d.py
src/b2/: README.md
src/b2/dados/: base_conhecimento.json  grafo_paises.json  queries_teste.json
src/b2/docs/: CHROMA_DB.md  PLANEJAMENTO.md
src/b2/exemplos/: 01_sistema_busca_semantica.py  02_grafos_conhecimento.py  03_avaliacao_busca.py  04_banco_vetores_chromadb.py
src/b3/: README.md  config.py  main.py
src/b3/docs/: glossary.md  interpretation-guide.md  plan.md  storage-locations.md  testing-guide.md
src/b3/models/: embedding_classifier.py  finetuned_classifier.py  llm_classifier.py
src/b3/notebooks/: error_analysis.ipynb  exploratory_analysis.ipynb  interactive_playground.ipynb  results_analysis.ipynb  test_quick.ipynb  test_visualizations.ipynb
src/b3/utils/: data_loader.py  metrics.py  visualization.py
src/project1/: .env.example  INSTALL.md  README.md
src/project2/: README.md  recommendation.ipynb
src/project2/docs/: parameters.md
